fix: file loader class

--- a/documentation/com/juka/graphmap/domain/model/exception/NodeNotFountException.html
+++ b/documentation/com/juka/graphmap/domain/model/exception/NodeNotFountException.html
@@ -77,7 +77,7 @@ loadScripts(document, 'script');</script>
 <div class="inheritance"><a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/Throwable.html" title="class or interface in java.lang" class="external-link">java.lang.Throwable</a>
 <div class="inheritance"><a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/Exception.html" title="class or interface in java.lang" class="external-link">java.lang.Exception</a>
 <div class="inheritance"><a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/RuntimeException.html" title="class or interface in java.lang" class="external-link">java.lang.RuntimeException</a>
-<div class="inheritance">com.juka.graphmap.domain.model.exception.NodeNotFountException</div>
+<div class="inheritance">com.juka.graphmap.domain.model.exception.NodeNotFoundException</div>
 </div>
 </div>
 </div>
@@ -95,7 +95,7 @@ loadScripts(document, 'script');</script>
 <dt>Since:</dt>
 <dd>0.1.0</dd>
 <dt>See Also:</dt>
-<dd><a href="../../../../../../serialized-form.html#com.juka.graphmap.domain.model.exception.NodeNotFountException">Serialized Form</a></dd>
+<dd><a href="../../../../../../serialized-form.html#com.juka.graphmap.domain.model.exception.NodeNotFoundException">Serialized Form</a></dd>
 </dl>
 </section>
 <section class="summary">
