--- a/documentation/serialized-form.html
+++ b/documentation/serialized-form.html
@@ -97,8 +97,8 @@ loadScripts(document, 'script');</script>
 </section>
 </li>
 <li>
-<section class="serialized-class-details" id="com.juka.graphmap.domain.model.exception.NodeNotFountException">
-<h3>Class <a href="com/juka/graphmap/domain/model/exception/NodeNotFountException.html" title="class in com.juka.graphmap.domain.model.exception">com.juka.graphmap.domain.model.exception.NodeNotFountException</a> extends <a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/RuntimeException.html" title="class or interface in java.lang" class="external-link">RuntimeException</a> implements Serializable</h3>
+<section class="serialized-class-details" id="com.juka.graphmap.domain.model.exception.NodeNotFoundException">
+<h3>Class <a href="com/juka/graphmap/domain/model/exception/NodeNotFountException.html" title="class in com.juka.graphmap.domain.model.exception">com.juka.graphmap.domain.model.exception.NodeNotFoundException</a> extends <a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/RuntimeException.html" title="class or interface in java.lang" class="external-link">RuntimeException</a> implements Serializable</h3>
 <ul class="block-list">
 <li>
 <section class="detail">
